--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Cart</title>
-    <link rel="stylesheet" href=""styles.css>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -31,7 +31,6 @@
 <br>
 
 <h2>Total: $<span id="total">0.00</span></h2>
-<script src="script.js">
-</script>
+<script src="script.js"></script>
 </body>
 </html>
